--- a/app/src/main/res/layout/activity_pantallac.xml
+++ b/app/src/main/res/layout/activity_pantallac.xml
@@ -26,37 +26,29 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="128dp"
+            android:layout_marginTop="64dp"
             android:layout_marginEnd="32dp"
+            android:background="#9A96A1"
             android:text="Regresar"
+            android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/statusc2" />
+            app:layout_constraintTop_toBottomOf="@+id/statusc" />
 
         <TextView
             android:id="@+id/statusc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="57dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginStart="40dp"
             android:layout_marginTop="63dp"
             android:layout_marginBottom="217dp"
-            android:text="TextView"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/bRegresarC"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.145" />
 
-        <TextView
-            android:id="@+id/statusc2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="56dp"
-            android:layout_marginTop="39dp"
-            android:text="TextView"
-            android:textSize="30sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/statusc" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
